[package]
authors = ["Jason Ozias <jason.ozias@gmail.com>"]
description = "AWS Authorization Header Generation (AWS Signature Version 4)"
documentation = "http://rustyhorde.github.io/warheadhateus"
homepage = "http://rustyhorde.github.io/warheadhateus"
keywords = ["aws", "authorization", "header", "s3"]
license = "MIT/Apache-2.0"
name = "warheadhateus"
readme = "README.md"
repository = "https://github.com/rustyhorde/warheadhateus"
version = "0.2.2-pre"

edition = "2018"

[dependencies]
base64 = "0.11"
chrono = "0.4"
hex = "0.4"
hmac = "0.7"
log = "0.4"
sha2 = "0.8"
urlparse = "~0.7.3"

[dev-dependencies]
bitflags = "1"
clap = "2.1.2"
curl = "~0.2.16"
env_logger = "0.4"
regex = "1"
xml-rs = "~0.3.0"
